-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.262 2008-04-25 05:35:28 guru Exp $
-----------------------------------------------------------------------------------------
2008-04-24	remko
	* ps2raster:		Use PID to augment the file names of temporary files.
				This is not totally secure, but the alternative, mkstemp, is not
				standard enough (not ISO C90).
				Option -N has become obsolete. Use -S and/or -Te instead.

2008-04-22	pwessel
	* psxy.c:	Now will properly clip polygon outline and not draw it along clipped border.
	* configure.ac:		Added support for --enable-mex-mdir=dir and --enable-mex-xdir=dir
				to override the Matlab/Octave preferred paths for local *.mfiles
				and *.mex functions.
	* install_gmt:		Now uses these new variables when running configure.

2008-04-21	pwessel
	* mapproject.c:		-G+ will compute distance between coordinates in first 4 columns

2008-04-19	pwessel
	* configure.ac, src/makegmt.macros.in, mex/makefile:  Added support for --enable-octave
		as an alternative to --enable-matlab

2008-04-16	remko
	* psxy.c, psxyz.c:	Two bug fixes in both programs.
				- If first symbol in list with size was not circle, it got rejected.
				- When sizes of -Sr or -Sj were read from list, they were always inches.

2008-04-15	remko
	* pslib.c, PSL_*.ps:	Renamed a few PostScript commands; reduced a bit in size.
	* gmt_support.c (GMT_just_decode):	Bug fix: was defaulting to BC, instead of BL.
				Also reduced to two arguments (second being default justification).
	* ps{image,legend}.c:	Reduced arguments in GMT_just_decode.
	* ps{scale,text}.c:	---"---
	* gmt_support.h:	---"---
	* gmt_plot.[ch] (GMT_timestamp):	Added "justify" argument to specify justification of
				the time stamp box. Provided by gmtdefaults or -U option.
	* gmt_init.c:		Added justification to GMT_UNIX_POS. Is now <just>/<dx>/<dy>.
				Also added <just> to -U option parsing.